--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,8 +4,8 @@ h1 a, h2 a {
 }
  body{
    padding-left:  15px;
-   color: #C25100;
-   background-color: MediumSeaGreen;
+   color: #DodgerBlue;
+   background-color: #Yellow;
  }
 
 
